gcc/testsuite/rust/rustc/ui/issues/issue-51874.rs
fn main() {
    let a = (1.0).pow(1.0); // { dg-error ".E0689." "" { target *-*-* } }
}

